After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 581043 - does not terminate properly on shutdown/restart
does not terminate properly on shutdown/restart
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: gnome-session
2.26.x
Other Linux
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-05-01 20:24 UTC by Bill Nottingham
Modified: 2009-06-29 22:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (2.28 KB, patch)
2009-05-01 20:25 UTC, Bill Nottingham
none Details | Review

Description Bill Nottingham 2009-05-01 20:24:11 UTC
gnome-session does not properly exit if 'Shutdown' or 'Restart' are chosen from the panel menu. This is because the signal that the ConsoleKit request was handled is never emitted. Ergo, gnome-session continues to run, emit shutdown requests, etc. This normally isn't noticed because a properly-handled shutdown request to CK will cause it to get whacked eventually.

Replacing /sbin/shutdown with a script that does nothing makes it really obvious.

(Noticed because multiple shutdown requests triggered a nasty bug in Fedora's initscripts.)
Comment 1 Bill Nottingham 2009-05-01 20:25:01 UTC
Created attachment 133755 [details] [review]
patch

Here's a patch that emits the proper signal on success, not just failure. Also, fixes an error -> error message confusion.
Comment 2 Vincent Untz 2009-06-29 22:24:14 UTC
Good catch! Your patch was emitting a signal when it shouldn't (when PolicyKit required some interaction for privilege escalation), but I fixed this.