[gsm] Make gnome-session exit properly on reboot/shutdown

GsmConsoleKit wasn't correctly emitting signals on success, and
therefore the manager couldn't exit properly.

http://bugzilla.gnome.org/show_bug.cgi?id=581043